Fix article margin & paragraph spacing

--- a/css/main.css
+++ b/css/main.css
@@ -2079,7 +2079,8 @@ iframe {
     color: #000;
     font-size: 1.6rem;
     text-shadow: none;
-    text-transform: none;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
     padding: 0 18vw;
   }
 
@@ -2102,8 +2103,8 @@ iframe {
   #article {
      display: block;
      margin-top: 20vw;
-     margin-left: 5vw;
-     margin-right: 5vw;
+     margin-left: 8vw;
+     margin-right: 8vw;
    }
 
   #square {
@@ -2127,7 +2128,6 @@ iframe {
   .article-image{
     margin-top: 15vw;
     position: relative;
-    left: 25vw;
   }
 
   .article-image img {
@@ -2211,6 +2211,7 @@ iframe {
 
   .items-text h1 {
     margin: 100px 0 0 0;
+    padding: 0 12vw;
   }
 
   /* responsive for citations */
@@ -2222,4 +2223,5 @@ iframe {
     font-size: 1rem;
     line-height: 7vw;
   }
+
 }
